--- a/src/DemoMvc/Views/Shared/_Menus.cshtml
+++ b/src/DemoMvc/Views/Shared/_Menus.cshtml
@@ -9,5 +9,8 @@
         <li>
             <a href="@Url.Action("Index", "VueLayout")">Vue</a>
         </li>
+        <li>
+            <a href="@Url.Action("Index", "VueLayout2")">Vue2</a>
+        </li>
     </ul>
 </nav>
