add vuepage demo

--- a/src/DemoMvc/Views/Shared/_Menus.cshtml
+++ b/src/DemoMvc/Views/Shared/_Menus.cshtml
@@ -15,5 +15,8 @@
         <li>
             <a href="@Url.Action("Index", "VueLayout2")">Vue2</a>
         </li>
+        <li>
+            <a href="@Url.Action("Index", "VuePage")">VuePage</a>
+        </li>
     </ul>
 </nav>
