fix layout2 demo

--- a/src/DemoMvc/Views/Shared/_Menus.cshtml
+++ b/src/DemoMvc/Views/Shared/_Menus.cshtml
@@ -16,7 +16,10 @@
             <a href="@Url.Action("Index", "VueLayout2")">Vue2</a>
         </li>
         <li>
-            <a href="@Url.Action("Index", "VuePage")">VuePage</a>
+            <a href="@Url.Action("Index", "VuePage")">VuePage-Index</a>
+        </li>
+        <li>
+            <a href="@Url.Action("Space", "VuePage")">VuePage-Space</a>
         </li>
     </ul>
 </nav>
