--- a/src/DemoMvc/Views/Shared/_Menus.cshtml
+++ b/src/DemoMvc/Views/Shared/_Menus.cshtml
@@ -13,13 +13,13 @@
             <a href="@Url.Action("Index", "VueLayout")">Vue</a>
         </li>
         <li>
-            <a href="@Url.Action("Index", "VueLayout2")">Vue2</a>
+            <a href="@Url.Action("Index", "VueLayout2")">Vue2 Index</a>
         </li>
         <li>
-            <a href="@Url.Action("Index", "VuePage")">VuePage-Index</a>
+            <a href="@Url.Action("TemplateInline", "VueLayout2")">Vue2 TemplateInline</a>
         </li>
         <li>
-            <a href="@Url.Action("Space", "VuePage")">VuePage-Space</a>
+            <a href="@Url.Action("TemplateJs", "VueLayout2")">Vue2 TemplateJs</a>
         </li>
     </ul>
 </nav>
