--- a/src/DemoMvc/Views/VueLayout2/Index.cshtml
+++ b/src/DemoMvc/Views/VueLayout2/Index.cshtml
@@ -3,6 +3,8 @@
 <div id="pageApp">
     <h2>{{demo.content}}</h2>
 </div>
+
+<nb-demo-layout style="background-color: yellow" text='from home index'></nb-demo-layout>
 @section scripts
 {
     <script>
