add TemplatePartial Demo

--- a/src/DemoMvc/Views/Shared/_Menus.cshtml
+++ b/src/DemoMvc/Views/Shared/_Menus.cshtml
@@ -21,5 +21,8 @@
         <li>
             <a href="@Url.Action("TemplateJs", "VueLayout2")">Vue2 TemplateJs</a>
         </li>
+        <li>
+            <a href="@Url.Action("TemplatePartial", "VueLayout2")">Vue2 TemplatePartial</a>
+        </li>
     </ul>
 </nav>
