--- a/src/DemoMvc/Views/Shared/_Menus.cshtml
+++ b/src/DemoMvc/Views/Shared/_Menus.cshtml
@@ -4,6 +4,9 @@
             <a href="@Url.Action("Index", "Home")">Home</a>
         </li>
         <li>
+            <a href="@Url.Action("Tree", "VueDemo")">Tree</a>
+        </li>
+        <li>
             <a href="@Url.Action("Index", "Delayed")">Delayed</a>
         </li>
         <li>
