add tree parital demo

--- a/src/DemoMvc/Views/Shared/_Menus.cshtml
+++ b/src/DemoMvc/Views/Shared/_Menus.cshtml
@@ -7,6 +7,9 @@
             <a href="@Url.Action("Tree", "VueDemo")">Tree</a>
         </li>
         <li>
+            <a href="@Url.Action("TreePartial", "VueDemo")">TreePartial</a>
+        </li>
+        <li>
             <a href="@Url.Action("Index", "Delayed")">Delayed</a>
         </li>
         <li>
