--- a/src/DemoMvc/Views/Delayed/Index.cshtml
+++ b/src/DemoMvc/Views/Delayed/Index.cshtml
@@ -3,9 +3,16 @@
 }
 
 <h2>Delayed Home Index</h2>
+@*@Html.Partial("_Foo")*@
 
 @section scripts
 {
+    <style>
+        #fromIndex {
+            background-color: #ff0000;
+        }
+    </style>
+
     <script>
         console.log('from Delayed Home Index');
     </script>
