--- a/src/DemoMvc/Views/JoinConfigs/Index.cshtml
+++ b/src/DemoMvc/Views/JoinConfigs/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dynamic
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Demo For JoinConfigs";
 }
 
-<h2>title</h2>
+<h2>@ViewBag.Title</h2>
