重构JoinJsConfigRegistry，支持多种配置并存和扩展

--- a/src/DemoMvc/Views/JoinConfigs/_Layout.cshtml
+++ b/src/DemoMvc/Views/JoinConfigs/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using CommonFx.Web.JoinConfigs
 @{
-    var requireJsConfig = JoinJsConfig.Instance;
+    var requireJsConfig = JoinJsConfigRegistry.Instance.RequireJs();
     var configPath = requireJsConfig.JoinJsConfigVirtualPath;
     
     //mock invoke init logic in application_start
@@ -23,7 +23,7 @@
             </tr>
         </thead>
         <tbody>
-        @foreach (var entry in config.RequireJsConfigEntries.Values)
+        @foreach (var entry in config.Entries.Values)
         {
             <tr>
                 <th scope="row">@(index++)</th>
